--- a/src/app/features/gis/components/quotation/components/import-risks/import-risks.component.css
+++ b/src/app/features/gis/components/quotation/components/import-risks/import-risks.component.css
@@ -1,20 +1,72 @@
 .img_upload {
-    display: inline-block;
-    font-family: 'Roboto', serif;
-    text-align: center;
-    background-color: var(--primary-color);
-    color: white;
-    padding: 0.5rem;
-    cursor: pointer;
-    border-radius: 2px 1px 2px 2px;
-
-    
+  display: inline-block;
+  font-family: 'Roboto', serif;
+  text-align: center;
+  background-color: var(--primary-color);
+  color: white;
+  padding: 0.5rem;
+  cursor: pointer;
+  border-radius: 2px 1px 2px 2px;
 }
 
 .title{
-    color: #000;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+  color: #000;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
+
+::ng-deep .p-dropdown {
+  height: 33px;
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.20);
+  border-radius: 4px;
+  display: flex;
+  align-items: center; /* Centers content vertically */
+}
+
+/* Vertically center the placeholder */
+::ng-deep .p-dropdown .p-dropdown-label.p-placeholder {
+  padding: 6px;
+  font-size: 14px;
+  color: #777;
+  display: flex;
+  align-items: center; /* Ensures vertical centering */
+  height: 100%;
+}
+
+/* Vertically center the selected value as well */
+::ng-deep .p-dropdown .p-dropdown-label {
+  padding: 6px;
+  font-size: 14px;
+  color: #000;
+  display: flex;
+  align-items: center; /* Ensures vertical centering */
+  height: 100%;
+}
+
+
+/* Search input inside dropdown */
+::ng-deep .p-dropdown-filter {
+  width: 100%;
+  height: 30px;
+  border-radius: 4px;
+  padding: 5px;
+}
+
+/* Dropdown items */
+::ng-deep .p-dropdown-panel {
+  width: 400px !important; /* Set fixed dropdown width */
+  max-width: 100% !important;
+}
+
+::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item {
+  font-size: 14px;
+  color: #000;
+  padding: 5px 15px;
+  font-family: Roboto, sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
