VQ-796-NORMAL-QUOTE: 1. Design change:Adding risk section. 2. Patch values on risk form screen. 3.Patch values on quotation form. 4.Delete quotation product. 5.Clear session storage when doing a normal quote. 6. Handling how data is rendered on Quotation summary screen. 7. Optimizing API calls across all screens.

--- a/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.css
+++ b/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.css
@@ -9,7 +9,14 @@
     text-decoration-skip-ink: none;
 
 }
-
+.titleMain{
+    color: #000;
+    font-family: Lato;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
 .card {
     border: 1px solid rgba(220, 220, 220, 0.85);
     border-radius: 5px;
