--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.css
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.css
@@ -248,16 +248,16 @@
     border-color: rgba(0, 0, 0, 0.40);
 }
 
-
+/* 
 #addSectionModal {
     width: 367px;
 
-}
+} */
 
 #search-input-Rsection {
-    border: none;
+    /* border: none; */
     background-color: transparent;
-    width:200px;
+    width:400px;
   }
   /* #search-input-Rsection:focus{
   border-color: transparent;  } */
@@ -325,7 +325,7 @@
   }
 
   ::ng-deep .p-calendar{
-    height: 33px;
+    height: 33px !important;
     width: 100%;
     border: 1px solid rgba(0, 0, 0, 0.20);
     border-radius: 4px;
@@ -341,6 +341,14 @@
     padding: 3px;
     font-size: 14px;
     color: #000;
+  }
+  .equal-width {
+    width: 20%;
+    min-width: 100px; /* Adjust as needed */
+    /* text-align: center; */
+  }
+  .error-border {
+    border: 1px solid red !important;
   }
 
 
